--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "author": "TeamPKBA",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "custom-env": "^2.0.1",
     "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "form-data": "^3.0.0",
+    "multer": "^1.4.2",
+    "pg": "^8.5.1",
+    "vue-uuid": "^2.0.2"
   }
 }
